- fixed Issue 35: java.lang.NullPointerException - Update to OWLAPI to allow import by location